feat: create style.css

--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>CV</title>
 </head>
 <body>
     <img src="" alt="CV_image">
-    <h1>Dmitriy Savchenko</h1>
+    <h1 class="cv-header">Dmitriy Savchenko</h1>
 </body>
 </html>
