fix: fix src for image in index.html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>CV</title>
 </head>
 <body>
-    <img src="/img/cv.jpg" alt="CV_image"  class="cv-logo">
+    <img src="img/cv.jpg" alt="CV_image"  class="cv-logo"/>
     <h1 class="cv-header">Dmitriy Savchenko</h1>
 </body>
 </html>
