--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>CV</title>
 </head>
 <body>
+    <div class="container">
+        <div>
+            
+        </div>
+    </div>
     <img src="img/cv.jpg" alt="CV_image"  class="cv-logo"/>
     <h1 class="cv-header">Dmitriy Savchenko</h1>
 </body>
