--- a/index.html
+++ b/index.html
@@ -11,12 +11,49 @@
 <body>
     <header class="main-header">
         <div class="container">
-        
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#about_me" class="nav-link">About me</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#english-level" class="nav-link">English-level</a></li>
+                </ul>
+              </nav>
         </div>
     </header>
-    <main class="main-container">
+    <main class="main main-container">
         <div class="container">
-        
+            <section class="section" id="profile">
+                <h1 class="section-title">DMYTRO SAVCHENKO</h1>
+            </section>
+            <section class="section" id="contacts">
+                <h1 class="section-title">CONTACTS</h1>
+            </section>
+            <section class="section" id="about_me">
+                <h2 class="section-title">ABOUT ME</h2>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">SKILLS</h2>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">CODE</h2>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">COURSES</h2>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">PROGECTS</h2>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">EDUCATION</h2>
+            </section>
+            <section class="section" id="english-level">
+                <h2 class="section-title">ENGLISH-LEVEL</h2>
+            </section>
         </div>
     </main>
     <footer class="main-footer">
