docs: add new css file and new structure in index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="my_icon.css">
+    <link rel="stylesheet" href="my_icon-codes.css">
     <title>CV</title>
 </head>
 <body>
@@ -22,16 +24,25 @@
                     <li class="nav-item"><a href="#education" class="nav-link">Education</a></li>
                     <li class="nav-item"><a href="#english-level" class="nav-link">English-level</a></li>
                 </ul>
-              </nav>
+            </nav>
         </div>
     </header>
-    <main class="main main-container">
-        <div class="container">
+    <main class="main">
             <section class="section" id="profile">
+                <div class="logo-container">
+                    <!-- <img src="./assets/img/cv.jpg" alt="cv-image" class="main-section-logo"> -->
+                </div>
                 <h1 class="section-title">DMYTRO SAVCHENKO</h1>
             </section>
             <section class="section" id="contacts">
                 <h1 class="section-title">CONTACTS</h1>
+                <ul class="contact-list">
+                    <li class="contact-list__item icon-location">Zaporozhye, Ukraine</li>
+                    <li class="contact-list__item icon-email">Email: <a href="#" target="_blank">fast27111986@gmail.com</a></li>
+                    <li class="contact-list__item icon-github">Githup: <a href="#" target="_blank">@dmitriy2711</a></li>
+                    <li class="contact-list__item icon-telegram">Telegram: <a href="#" target="_blank">my telegram</a></li> 
+                    <li class="contact-list__item icon-discord">Discord: <a href="#" target="_blank">my discord</a></li>
+                </ul>
             </section>
             <section class="section" id="about_me">
                 <h2 class="section-title">ABOUT ME</h2>
@@ -54,13 +65,9 @@
             <section class="section" id="english-level">
                 <h2 class="section-title">ENGLISH-LEVEL</h2>
             </section>
-        </div>
-    </main>
-    <footer class="main-footer">
-        <div class="container">
         
-        </div>
-    </footer>
+    </main>
+    <footer class="main-footer"></footer>
     <!-- <div class="container">
         <div>
             
