--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                 <div class="logo-container">
                     <!-- <img src="./assets/img/cv.jpg" alt="cv-image" class="main-section-logo"> -->
                 </div>
-                <h1 class="section-title">DMYTRO SAVCHENKO</h1>
+                <h1 class="section-title profile__title">DMYTRO SAVCHENKO</h1>
             </section>
+            <div class="container">
             <section class="section" id="contacts">
                 <h1 class="section-title">CONTACTS</h1>
                 <ul class="contact-list">
@@ -44,28 +45,59 @@
                     <li class="contact-list__item icon-discord">Discord: <a href="#" target="_blank">my discord</a></li>
                 </ul>
             </section>
-            <section class="section" id="about_me">
-                <h2 class="section-title">ABOUT ME</h2>
-            </section>
-            <section class="section" id="skills">
-                <h2 class="section-title">SKILLS</h2>
-            </section>
-            <section class="section" id="code">
-                <h2 class="section-title">CODE</h2>
-            </section>
-            <section class="section" id="courses">
-                <h2 class="section-title">COURSES</h2>
-            </section>
-            <section class="section" id="projects">
-                <h2 class="section-title">PROGECTS</h2>
-            </section>
-            <section class="section" id="education">
-                <h2 class="section-title">EDUCATION</h2>
-            </section>
-            <section class="section" id="english-level">
-                <h2 class="section-title">ENGLISH-LEVEL</h2>
-            </section>
-        
+            
+                <section class="section " id="about_me">
+                    <h2 class="section-title">ABOUT ME</h2>
+                    <p class="section__about-me">
+                        I have been passionate about programming and design since 2010. I am also interested in the construction field.
+                        In 2010 he entered the Zaporozhye Computer Academy "STEP" for the specialty of design, studied web technologies in parallel.
+                        I constantly practice and study new opportunities in development, learn new techniques and follow the IT sphere.
+                        I have practical experience on javascript, I am interested in PHP in the field of web development.
+                    </p>
+                </section>
+                <section class="section" id="skills">
+                    <h2 class="section-title">SKILLS</h2>
+                    <ul class="skills__list">
+                        <li class="skills__item">Web-development: HTML 5, CSS, Javascript;</li>
+                        <li class="skills__item">Frameworks and libraries: Vue js;</li>
+                        <li class="skills__item">Version control: Git, Github;</li>
+                        <li class="skills__item">Graphics: Figma;</li>
+                    </ul>
+                </section>
+                <section class="section" id="code">
+                    <h2 class="section-title">CODE</h2>
+                    <code class="code">
+                        <em>javascript</em><br><br>
+                            let str = "String"
+                            const str_func = (string) => {<br>
+                                if (string == "") {<br>
+                                    return "Error 404";<br>
+                                }<br>
+                                    return string;<br>
+                            };<br>
+                            let result = str_func(str);<br>
+                            console.log(result);<br>
+                    </code>
+                </section>
+                <section class="section" id="courses">
+                    <h2 class="section-title">COURSES</h2>
+                    <ul class="courses__list">
+                        <li class="courses__item">It-STEP Zaporozhye : <span>WEb-design;</span></li>
+                        <li class="courses__item">ITEA Dnipro : <span>HTML and CSS course;</span></li>
+                        <li class="courses__item">ITEA Dnipro : <span>Javascript Basic;</span></li>
+                        <li class="courses__item">ITEA Dnipro : <span>Javascript Advanced;</span></li>
+                    </ul>
+                </section>
+                <section class="section" id="projects">
+                    <h2 class="section-title">PROGECTS</h2>
+                </section>
+                <section class="section" id="education">
+                    <h2 class="section-title">EDUCATION</h2>
+                </section>
+                <section class="section" id="english-level">
+                    <h2 class="section-title">ENGLISH-LEVEL</h2>
+                </section>
+            </div>
     </main>
     <footer class="main-footer"></footer>
     <!-- <div class="container">
