docs: change cv.md file

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                     <h2 class="section-title">PROGECTS</h2>
                     <ul class="projects__list">
                         <li class="projects__item">ITEA Dnipro - <a href="https://dmitriy2711.github.io/javascript_course_work/" target="_blank">Gallary</a></li>
-                        <li class="projects__item"><a href="https://dmitriy2711.github.io/HTML_CSS_project/" target="_blank">Stomatology site</a></li>
+                        <li class="projects__item">ITEA Dnipro - <a href="https://dmitriy2711.github.io/HTML_CSS_project/" target="_blank">Stomatology site</a></li>
                     </ul>
                 </section>
                 <section class="section" id="education">
