--- a/index.html
+++ b/index.html
@@ -97,9 +97,11 @@
                 </section>
                 <section class="section" id="education">
                     <h2 class="section-title">EDUCATION</h2>
+                    <p>Computer Academy in Dnipro "ITEA"</p>
                 </section>
                 <section class="section" id="english-level">
                     <h2 class="section-title">ENGLISH-LEVEL</h2>
+                    <p>A1-Pre-Intermediate </p>
                 </section>
             </div>
     </main>
