docs:add new elements in index.html

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <section class="section" id="code">
                     <h2 class="section-title">CODE</h2>
                     <code class="code">
-                        <em>javascript</em><br><br>
+                        <span class="code__span">javascript</span><br><br>
                             let str = "String"
                             const str_func = (string) => {<br>
                                 if (string == "") {<br>
@@ -101,17 +101,14 @@
                 </section>
                 <section class="section" id="english-level">
                     <h2 class="section-title">ENGLISH-LEVEL</h2>
-                    <p>A1-Pre-Intermediate </p>
+                    <p>A1-Pre-Intermediate</p>
                 </section>
             </div>
     </main>
-    <footer class="main-footer"></footer>
-    <!-- <div class="container">
-        <div>
-            
+    <footer class="main-footer ">
+        <div class="main-footer__block container">
+            <span class="main-footer__span">2022</span><a href="https://github.com/Dmitriy2711/rsschool-cv">@dmitriy2711</a>
         </div>
-    </div>
-    <img src="assets/img/cv.jpg" alt="CV_image"  class="cv-logo"/>
-    <h1 class="cv-header">Dmitriy Savchenko</h1> -->
+    </footer>
 </body>
 </html>
