--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main class="main">
-            <section class="section" id="profile">
+            <section class="section container" id="profile">
                 <div class="logo-container">
                     <!-- <img src="./assets/img/cv.jpg" alt="cv-image" class="main-section-logo"> -->
                 </div>
